fix: remove border-bottom on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -104,6 +104,7 @@ body {
 
   @media screen and (max-width: 1024px) {
     background-color: unset;    
+    border-bottom: unset;
   }
 
 }
